[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/menu_style.tres" type="StyleBox" id=1]
[ext_resource path="res://ui/roboto_mono_36.tres" type="DynamicFont" id=2]
[ext_resource path="res://ui/BuyScreen.gd" type="Script" id=3]
[ext_resource path="res://ui/OptionColumns.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.25098 )

[node name="BuyScreen" type="CanvasLayer"]
pause_mode = 2
layer = 2
script = ExtResource( 3 )

[node name="Overlay" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )

[node name="PauseMenuContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="PauseMenuContainer"]
margin_left = 388.0
margin_top = 187.0
margin_right = 636.0
margin_bottom = 413.0
custom_styles/panel = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="PauseMenuContainer/PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 238.0
margin_bottom = 216.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="Rows" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 208.0
margin_bottom = 186.0
custom_constants/separation = 20

[node name="BuyTitle" type="Label" parent="PauseMenuContainer/PanelContainer/MarginContainer/Rows"]
margin_right = 188.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "SHOP"
align = 1

[node name="HSeparator" type="HSeparator" parent="PauseMenuContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 68.0
margin_right = 188.0
margin_bottom = 72.0

[node name="ContinueButton" type="Button" parent="PauseMenuContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 92.0
margin_right = 188.0
margin_bottom = 146.0
custom_fonts/font = ExtResource( 2 )
text = "CONTINUE"

[node name="OptionColumnsContainer" type="VBoxContainer" parent="PauseMenuContainer/PanelContainer/MarginContainer/Rows"]
margin_top = 166.0
margin_right = 188.0
margin_bottom = 166.0

[node name="OptionColumns" parent="PauseMenuContainer/PanelContainer/MarginContainer/Rows/OptionColumnsContainer" instance=ExtResource( 4 )]

[connection signal="pressed" from="PauseMenuContainer/PanelContainer/MarginContainer/Rows/ContinueButton" to="." method="_on_ContinueButton_pressed"]
